// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsletterPuffButton renders the button with the text \`Saving...\` 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderColor": "#1D1D1B",
      "borderRadius": 2,
      "borderStyle": "solid",
      "borderWidth": 2,
      "color": "#1D1D1B",
      "cursor": "pointer",
      "elevation": 0,
      "fontFamily": "GillSansMTStd-Medium",
      "fontSize": 16,
      "height": 45,
      "justifyContent": "center",
      "letterSpacing": 0.2,
      "lineHeight": 0,
      "minWidth": 100,
      "paddingTop": 4,
      "width": "100%",
    }
  }
  type="button"
>
  Saving…
</button>
`;

exports[`NewsletterPuffButton renders the button with the text \`Sign up to newsletter\` 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderColor": "#1D1D1B",
      "borderRadius": 2,
      "borderStyle": "solid",
      "borderWidth": 2,
      "color": "#1D1D1B",
      "cursor": "pointer",
      "elevation": 0,
      "fontFamily": "GillSansMTStd-Medium",
      "fontSize": 16,
      "height": 45,
      "justifyContent": "center",
      "letterSpacing": 0.2,
      "lineHeight": 0,
      "minWidth": 100,
      "paddingTop": 4,
      "width": "100%",
    }
  }
  type="button"
>
  Sign up now
</button>
`;

exports[`NewsletterPuffButton should track button viewed and clicked in analytics 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "article_parent_name": "RED BOX",
        "eventTime": "2018-01-01T00:00:00.000Z",
        "event_navigation_action": "navigation",
        "event_navigation_browsing_method": "automated",
        "event_navigation_name": "widget : puff : sign up now : displayed",
      },
      "component": "Page",
      "object": "NewsletterPuffButton",
    },
  ],
  Array [
    Object {
      "action": "onPress",
      "attrs": Object {
        "article_parent_name": "RED BOX",
        "eventTime": "2018-01-01T00:00:00.000Z",
        "event_navigation_action": "navigation",
        "event_navigation_browsing_method": "click",
        "event_navigation_name": "widget : puff : sign up now",
      },
      "component": "NewsletterPuffButton",
      "object": "NewsletterPuffButton",
    },
  ],
]
`;

exports[`NewsletterPuffButton should track button viewed in analytics 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "article_parent_name": "RED BOX",
        "eventTime": "2018-01-01T00:00:00.000Z",
        "event_navigation_action": "navigation",
        "event_navigation_browsing_method": "automated",
        "event_navigation_name": "widget : puff : sign up now : displayed",
      },
      "component": "Page",
      "object": "NewsletterPuffButton",
    },
  ],
]
`;
